# django-test

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
docker/: docker-compose-dev.yml  docker-compose-prod.yml
nginx/: nginx.conf
project/: config.py  schemas.py  service.py
project/discounts/: admin.py  models.py
project/discounts/migrations/: 0001_initial.py  0002_alter_discount_duration.py  0003_discount_name.py
project/items/: admin.py  models.py  urls.py  views.py
project/items/migrations/: 0001_initial.py  0002_alter_item_id.py  0003_item_created_at_item_updated_at.py  0004_item_currency.py
project/orders/: admin.py  forms.py  models.py  urls.py  views.py
project/orders/migrations/: 0001_initial.py  0002_alter_order_discounts_alter_order_taxes.py
project/payments/: schemas.py  service.py  urls.py  views.py
project/src/: gunicorn_config.py  settings.py  urls.py
project/taxes/: admin.py  models.py
project/taxes/migrations/: 0001_initial.py  0002_remove_tax_name_tax_type_alter_tax_id.py
project/templates/: index.html
project/templates/items/: item.html  items.html
project/templates/orders/: order.html  orders.html
